--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "aniversario_projeto",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html src/styles/main.scss src/scripts/main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build src/index.html"
   },
   "author": "",
   "license": "ISC",
